# GGLib

./: #  .gitignore  .gitmodules  CMakeLists.txt  GGLib.sln  README.md  TODO.md
Demo_Sandbox/: CMakeLists.txt  Demo_Sandbox.vcxproj  Demo_Sandbox.vcxproj.filters  Main.cpp
Demo_Sandbox/include/: AssetManagerWrapper.h  Demo.h
Demo_Sandbox/source/: Demo.cpp
Examples/: CMakeLists.txt
Examples/Demo_ChapterSix/: Main.cpp
Examples/Demo_GameOfLife/: GoLControl.h  Main.cpp
Examples/Demo_ManyControls/: PerformanceTracker.cpp
Examples/Demo_Noise/include/: AssetManagerWrapper.h  Noise.h  PerlinViewer.h
Examples/Demo_Noise/source/: Noise.cpp
Examples/Demo_Scrollables/include/: Demo.h
Examples/Demo_Scrollables/source/: Demo.cpp
GGLib/: CMakeLists.txt  DragManager.h  GGLib.vcxproj  GGLib.vcxproj.filters  Main.cpp
GGLib/demo/include/: Button.h  Demo.h  DemoAssetManager.h  Slider.h
GGLib/demo/resources/dev/: ResourceSources.txt
GGLib/demo/source/: Demo.cpp  DemoAssetManager.cpp
GGLib/engine/include/: AssetManager.h  Button.h  Canvas.h  GGApp.h  GGWindow.h  Game.h  GameTimer.h  GameWindow.h  InputManager.h  MoreMath.h  TextFile.h  UIControl.h  UIManager.h  Vec2D.h  Vec3D.h
GGLib/engine/include/ui/: Button.h  Checkbox.h  Combobox.h  Container.h  Control.h  Element.h  HorizontalDivider.h  Label.h  Panel.h  Scrollable.h  Slider.h  Textbox.h  Toggle.h  UIControl.h  UIManager.h  Visitor.h
GGLib/engine/source/: AssetManager.cpp  AudioManager.cpp  Button.cpp  Canvas.cpp  GGApp.cpp  GGWindow.cpp  Game.cpp  GameTimer.cpp  GameWindow.cpp  InputManager.cpp  MoreMath.cpp  TextFile.cpp  UIControl.cpp
GGLib/engine/source/ui/: Button.cpp  Combobox.cpp  Textbox.cpp  UIControl.cpp  Visitor.cpp
GGLib/include/: AssetManager.h  AudioManager.h  Canvas.h  DragManager.h  FileDialog.h  GGApp.h  GGWindow.h  InitsSDL.h  InputManager.h  MoreMath.h  Text.h  Timer.h  UI.h  Vec2D.h
GGLib/include/GG/AssetManagement/: AssetManager.h  AudioManager.h  TextFile.h
GGLib/include/GG/Core/: Application.h  GGApp.h  InitsSDL.h  Window.h
GGLib/include/GG/Input/: DragManager.h  InputManager.h
GGLib/include/GG/MoreMath/: MoreMath.h  Vec2D.h  Vec3D.h
GGLib/include/GG/Rendering/: Canvas.h  Text.h
GGLib/include/GG/UI/: Container.h  Control.h  Element.h  Enums.h  FileDialog.h  RootContainer.h  UI.h
GGLib/include/GG/Utilities/: Timer.h
GGLib/include/ui/: Button.h  Container.h  Control.h  Element.h  HorizontalSpacer.h  Label.h  Scrollable.h  Slider.h  Textbox.h  Toggle.h  UITypes.h  Visitor.h
GGLib/noise_demo/include/: Noise.h  NoiseAssetManager.h  PerlinViewer.h
GGLib/noise_demo/source/: Noise.cpp  NoiseAssetManager.cpp
GGLib/source/: AssetManager.cpp  AudioManager.cpp  Canvas.cpp  GGApp.cpp  GGWindow.cpp  InitsSDL.cpp  InputManager.cpp  MoreMath.cpp  Text.cpp  Timer.cpp  Vec2D.cpp  Vec3D.cpp
GGLib/source/AssetManagement/: AssetManager.cpp  AudioManager.cpp  TextFile.cpp
GGLib/source/Core/: Application.cpp  GGApp.cpp  GGWindow.cpp  InitsSDL.cpp  Window.cpp
GGLib/source/Input/: DragManager.cpp  InputManager.cpp
GGLib/source/MoreMath/: MoreMath.cpp  Vec2D.cpp  Vec3D.cpp
GGLib/source/Rendering/: Canvas.cpp  Text.cpp
GGLib/source/UI/: Container.cpp  Control.cpp  RootContainer.cpp
GGLib/source/UI/Controls/: Button.cpp  Checkbox.cpp  Combobox.cpp  HorizontalDivider.cpp  HorizontalSpacer.cpp  Label.cpp  Slider.cpp  Textbox.cpp  Toggle.cpp
GGLib/source/UI/FileDialogs/: FileDialog.cpp  OpenFileDialog.cpp  OpenFolderDialog.cpp  SaveFileDialog.cpp
GGLib/source/UI/Visitors/: Visitor.cpp  Visitor_Autosize_Horizontal.cpp  Visitor_Autosize_Vertical.cpp  Visitor_CalculateMinimumSizing.cpp  Visitor_DestroySelfAndChildren.cpp  Visitor_GetChildren.cpp  Visitor_GrowShrink_Horizontal.cpp  Visitor_GrowShrink_Vertical.cpp  Visitor_HitTest.cpp  Visitor_Positions.cpp  Visitor_SetInputManager.cpp  Visitor_WrapText.cpp
GGLib/source/Utilities/: Timer.cpp
GGLib/source/ui/: Button.cpp  Element.cpp  Textbox.cpp  Visitor.cpp  Visitor_Autosize.cpp  Visitor_Autosize_Horizontal.cpp  Visitor_Autosize_Vertical.cpp  Visitor_CalculateMinimumSizing.cpp  Visitor_DestroySelfAndChildren.cpp  Visitor_GetChildren.cpp  Visitor_GrowShrink.cpp  Visitor_GrowShrink_Horizontal.cpp  Visitor_GrowShrink_Vertical.cpp  Visitor_Positions.cpp  Visitor_SetInputManager.cpp  Visitor_WrapText.cpp
(+48 files in other folders)
